--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 altair==5.4.1
 attrs==24.2.0
 blinker==1.9.0
@@ -44,3 +43,4 @@ faiss-cpu==1.9.0
 pandas==2.1.1
 sentence-transformers==2.2.2
 huggingface_hub==0.17.1
+torch==2.0.1
