--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.40.1
-pdfplumber==0.10.1
-sentence-transformers==2.2.2
-numpy==1.25.2
-faiss-cpu==1.9.0
-pandas==2.1.1
-torch==2.0.1
+streamlit
+pdfplumber
+sentence-transformers
+numpy
+faiss-cpu
+pandas
+torch
